styles.css
@font-face {
    font-family: Norse-Bold;
    src: url(fonts/Norse-Bold.otf);
}

body {
    display: flex;
    flex-direction: row;
    justify-content:space-between;
    height: 100vh;
    margin: 0px;
}
.logo ,.main-content {
    position: relative;
    flex-grow: 1;
}
.logo {
    background: url(imgs/plant_bg.jpg) no-repeat;
    background-size: 100% 100%;
}
.logo-content {
    display: flex;
    justify-content: center;
    align-items: center;
    width:40vw;
    gap: 5px;
    font-family: Norse-Bold;
    color: white;
    font-size: 5rem;
    background-color:rgba(0, 0, 0, .4);
    position: relative;
    top: 20vh;
}
.logo-content > img {
    height: 1.2em;
}
.logo-content > p {
    margin: 0 0;   
}
.main-content {
    display: flex;
    flex-direction: column;
    width: 60vw;
}
header {
    height: 35vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    background-color: rgba(219, 219, 219, 0.2);
    font-size: 1.3rem;
    font-weight: 500;
    padding-bottom: 2rem;
    padding-left: 1.3rem;
}
header > * {
    padding-right: 100px;
}
main {
    box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.4);
    padding-bottom: 1.2rem;
    display: flex;
}
fieldset {
    border: none;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    width: 50vw;
}
fieldset > div {
    margin-bottom: 1rem;
    display: flex;
    flex-flow: row wrap;
    width: 22.5vw;
}
label,input {
    display: flex;
    font-size: 100%;
    box-sizing: border-box;
    width: 100%;
    padding: 5px;
}
input {
    border: solid 1px #E5E7EB;
    border-radius: 5px;
    outline: none;
}
input:focus {
    border: solid 1px #00bfffea;
}
input[type=password]:not(:focus):not(:placeholder-shown):invalid{
    border: solid crimson;
}
form {
    display: flex;
}
footer {
    height: 35vh;
    padding: 1.3rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    background-color: rgba(219, 219, 219, 0.2);
}
button {
    background-color: #596D48;
    color: white;
    height: 2.3rem;
    width: 175px;
    border-radius: 6px;
}
a {
    color: #596D48;
    text-decoration: none;
    font-weight: 400;

}

